@@ -1,0 +1,19 @@
+include MANIFEST.in
+include setup_egg.py
+
+include doc/*.txt
+include doc/make_html.py
+include doc/data/*.png
+include doc/data/*.css
+include doc/examples/*.py
+include doc/examples/*.dat
+include doc/examples/*.edges
+include doc/examples/sample.mbox
+
+include networkx/tests/*.txt
+include networkx/tests/drawing/*.txt
+include networkx/tests/generators/*.txt
+
+global-exclude *~
+global-exclude *.pyc
+global-exclude .svn
